# iss-api-service

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  logging.conf  pyproject.toml
app/: __main__.py  config.py  endpoints.py  lifespan.py  schemas.py
app/adapters/: auth.py  db.py  discussion.py  gallery.py  gmail.py  mailer.py  repository.py  security.py
app/api/: __init__.py  auth.py  post.py  schemas.py  user.py
app/api/authorization/: endpoints.py  schemas.py
app/api/avatars/: endpoints.py
app/api/discussions/: endpoints.py  schemas.py
app/api/pictures/: endpoints.py
app/api/posts/: endpoints.py  schemas.py
app/api/users/: endpoints.py  schemas.py
app/domain/: commands.py  exceptions.py  models.py
app/service_layer/: dto.py  services.py  unit_of_work.py
app/utils/: config.py  interface.py
migrations/: env.py
migrations/versions/: 20616cad136a_cascade_delete.py  23244b6c2605_aspect_ratio.py  42a5c0e7e5b4_telegram_id.py  4363401316c9_messages.py  4f504761ae6f_bookmarks.py  6420773f9506_cascade.py  8baebb814f80_init_migration.py  9077654efec6_verify_code_attempts.py  948ad59887ea_migration.py  a1dc392b757a_statistics.py  d1c5440f9b0e_views.py  d63279449f83_verify_codes.py  e3d811644124_unique_bookmarks.py  ea70af22e20c_nullable_email.py
tests/unit/: test_posts.py
