[tool.poetry]
name = "iss-api-service"
version = "0.6.0"
description = ""
authors = ["Kirill Lapushinskiy <kirill@lapushinskiy.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0" # Веб-фйремворк
python-multipart = "^0.0.6" # Передача файлов по HTTP.
orjson = "^3.9" # Работа с JSON.
sqlalchemy = "^2.0.15" # ORM.
asyncpg = "^0.27.0" # Драйвер для асинхронного взаимодействия с PostgreSQL.
alembic = "^1.10.2" # Миграции.
pydantic = { extras = ["email"], version = "^1.10.8" }
google-api-python-client = "^2.87.0" #  API Gmail.
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
pyjwt = "^2.7.0"
pyyaml = "^6.0"
pillow = "^9.5.0" # Обработка изображений.
uvicorn = "^0.22.0" # ASGI-сверсер.
websockets = "^11.0.3" # Взаимодейтсвие по протоколу  WebScoket.


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
